# options-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
calibration/: __init__.py  heston_calibration.py  iv_solver.py  svi.py
data/: __init__.py  market_data.py
examples/: 01_black_scholes.py  02_mc_convergence.py  03_american_options.py  04_vol_surface.py  05_delta_hedge_backtest.py
greeks/: __init__.py  finite_difference.py  pathwise.py
models/: __init__.py  gbm.py  heston.py
pricers/: __init__.py  binomial.py  black_scholes.py  longstaff_schwartz.py  monte_carlo.py
strategies/: __init__.py  delta_hedge.py
tests/: test_pricers.py
