[project]
name = "options-engine"
version = "0.1.0"
description = "From-scratch options pricing, Greeks, vol surface calibration, and delta-hedge backtesting."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
data = ["yfinance>=0.2"]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
